<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="1dp"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:layout_marginStart="1dp"
    android:layout_marginTop="1dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    card_view:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingEnd="82dp"
            android:paddingStart="0dp"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/networkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:dropDownAnchor="@id/card_view"
            android:dropDownHeight="wrap_content"
            android:dropDownWidth="wrap_content"
            android:hint="@string/network"
            android:imeOptions="actionDone"
            android:inputType="text|textFilter"
            android:paddingBottom="4dp"
            android:paddingEnd="48dp"
            android:paddingStart="0dp"
            android:text=""
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toTopOf="@id/dateText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="2dp"
                android:textSize="24sp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/dateButton"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:background="@drawable/shadow_background"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_check_black_24dp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/deleteButton"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shadow_background"
                app:srcCompat="@drawable/ic_delete_black_24dp" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/viewedEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/dateText"
            app:layout_constraintRight_toLeftOf="@id/dateText"
            app:layout_constraintTop_toTopOf="@id/dateText"
            app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/locationText"
            app:layout_constraintRight_toRightOf="@id/locationText" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingBottom="2dp"
            android:text=""
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
